# outcome-bevy

./: Cargo.toml
examples/: cubes_viewer.rs
examples/sim/: scenario.toml
examples/sim/mods/cubes/: mod.outcome  mod.toml
src/: lib.rs
